fix printing css along with smaller headers when names are too long

--- a/src/App.css
+++ b/src/App.css
@@ -64,17 +64,5 @@
     }
 
     .App-header, .wrapper, .App-footer { display: none; }
-    
-    .text-content h3 {
-      font-size: 30px;
-    }
-
-    .text-content p {
-      font-size: 28px;
-    }
-
-    .text-content p.after-discount {
-      font-size: 32px;
-    }
 
 }
